--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
 compileKotlin {
