--- a/ads-intellij-plugin/resources/META-INF/plugin.xml
+++ b/ads-intellij-plugin/resources/META-INF/plugin.xml
@@ -25,7 +25,7 @@
   -->
 
   <extensions defaultExtensionNs="com.intellij">
-    <fileTypeFactory implementation="ch.bildspur.ads.AdsFileTypeFactory"/>
+    <fileTypeFactory implementation="ch.bildspur.ads.file.AdsFileTypeFactory"/>
   </extensions>
 
   <actions>
