--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
+    compile group: 'org.jfree', name: 'jfreesvg', version: '3.3'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
